update z-index; FIXED hover issue on dropdown

--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@
 #gutcheck {
 	padding: 5px var(--amazon-padding) var(--amazon-padding) var(--amazon-padding);
 	margin-block-end: calc(var(--amazon-padding) + 1px);
+	position: relative;
+	z-index: 1000000;
 }
 
 #gutcheck span {
@@ -111,7 +113,6 @@
 	flex-basis: auto;
 }
 
-/* Dropdown Content (Hidden by Default) */
 #gutcheck .dropdown-content {
 	display: none;
 	position: absolute;
@@ -121,10 +122,10 @@
 	min-width: 0;
 	box-sizing: border-box;
 	background-color: #f1f1f1;
-	z-index: 10;
+	z-index: 1000001;
+	pointer-events: auto;
 }
 
-/* Links inside the dropdown */
 #gutcheck .dropdown-content a {
 	color: black;
 	padding: 12px 16px;
@@ -135,8 +136,7 @@
 #gutcheck .dropdown-content a:hover {
 	background-color: #ddd;
 }
-
-/* Show the dropdown menu on hover */
+/* Using a + operator to target the adjacent dropdown-content element */
 #gutcheck .dropdown:hover + .dropdown-content,
 #gutcheck .dropdown-content:hover {
 	display: block;
